--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://kit.fontawesome.com/0a6f86bdfb.js" crossorigin="anonymous"></script>
   </body>
 </html>
