Set up first draft of form for contactMe

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://kit.fontawesome.com/0a6f86bdfb.js" crossorigin="anonymous"></script>
+    <script src="https://web3forms.com/client/script.js" async defer></script>
   </body>
 </html>
