Add meta tags for sharing on social media

--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Explore Jimdows95, a fun and interactive portfolio website inspired by Windows 95, showcasing my projects and experience.">
+    <meta name="keywords" content="portfolio, projects, experience, interactive, Windows 95, Jimdows95">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Jimdows95 | Jimmy Vu's Portfolio">
+    <meta property="og:description" content="Explore Jimdows95, a fun and interactive portfolio website inspired by Windows 95, showcasing my projects and experience.">
+    <meta property="og:image" content="https://github.com/Jimmy-Vu/jimdows95/blob/master/src/assets/thumbnail.png">
+    <meta property="og:url" content="https://jimmyvu.co/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Jimdows95 | Jimmy Vu's Portfolio">
+    <meta name="twitter:description" content="Explore Jimdows95, a fun and interactive portfolio website inspired by Windows 95, showcasing my projects and experience.">
+    <meta name="twitter:image" content="https://github.com/Jimmy-Vu/jimdows95/blob/master/src/assets/thumbnail.png">
+
     <link rel="stylesheet" href="src/styles/reset.css">
     <link rel="stylesheet" href="src/styles/styles.css">
     <title>Jimdows95 | Jimmy's Portfolio</title>
+
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
