Repoint thumbnail to raw image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Jimdows95 | Jimmy Vu's Portfolio">
     <meta property="og:description" content="Explore Jimdows95, a fun and interactive portfolio website inspired by Windows 95, showcasing my projects and experience.">
-    <meta property="og:image" content="https://github.com/Jimmy-Vu/jimdows95/blob/master/src/assets/thumbnail.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Jimmy-Vu/jimdows95/master/src/assets/thumbnail.png">
     <meta property="og:url" content="https://jimmyvu.co/">
     <meta property="og:type" content="website">
 
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Jimdows95 | Jimmy Vu's Portfolio">
     <meta name="twitter:description" content="Explore Jimdows95, a fun and interactive portfolio website inspired by Windows 95, showcasing my projects and experience.">
-    <meta name="twitter:image" content="https://github.com/Jimmy-Vu/jimdows95/blob/master/src/assets/thumbnail.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Jimmy-Vu/jimdows95/master/src/assets/thumbnail.png">
 
     <link rel="stylesheet" href="src/styles/reset.css">
     <link rel="stylesheet" href="src/styles/styles.css">
